--- a/src/app/features/portfolio/components/contact-section/contact-section.component.scss
+++ b/src/app/features/portfolio/components/contact-section/contact-section.component.scss
@@ -74,7 +74,7 @@
   }
 
   .arrow-container {
-    margin-top: 90px;
+    margin-top: 25px;
     padding-right: 70px;
     display: flex;
     justify-content: flex-end;
