--- a/src/app/features/portfolio/components/projects-section/projects-section.component.scss
+++ b/src/app/features/portfolio/components/projects-section/projects-section.component.scss
@@ -14,6 +14,7 @@ h2 {
   flex-direction: column;
   gap: 2rem;
   margin-bottom: 2rem;
+  padding: 16px;
 
   @media (min-width: 900px) {
     display: grid;
@@ -187,6 +188,7 @@ h2 {
   display: grid;
   grid-template-columns: 1fr;
   gap: 2.5rem;
+  padding: 16px;
 
   @media (min-width: 900px) {
     grid-template-columns: repeat(2, minmax(0, 1fr));
