--- a/src/app/features/portfolio/components/skills-section/skills-section.component.scss
+++ b/src/app/features/portfolio/components/skills-section/skills-section.component.scss
@@ -6,7 +6,7 @@
   position: relative;
   overflow: hidden;
   color: var(--text-main);
-  padding: clamp(96px, 12vw, 140px) 0 clamp(180px, 22vw, 260px) 0;
+  padding: clamp(96px, 12vw, 140px) 16px clamp(180px, 22vw, 260px) 16px;
 
   h4 {
     font-family: 'Bricolage Grotesque';
