--- a/src/styles.scss
+++ b/src/styles.scss
@@ -96,8 +96,6 @@ p {
 .container {
   max-width: 1440px;
   margin: 0 auto;
-  padding-left: 24px;
-  padding-right: 24px;
   width: 100%;
 }
 
